Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8058244/MissingErrorInDefaultSuperCallTest.out
MissingErrorInDefaultSuperCallTest.java:20:21: compiler.err.illegal.default.super.call: MissingErrorInDefaultSuperCallTest.I, (compiler.misc.redundant.supertype: MissingErrorInDefaultSuperCallTest.I, MissingErrorInDefaultSuperCallTest.J)
1 error
